tests/error/compile/option_keys_empty.wks
# @desc: Empty option keys
# @expect-error: Empty key options

<> "Empty" %{{error}}
